--- a/client/src/pages/search/index.less
+++ b/client/src/pages/search/index.less
@@ -1,4 +1,6 @@
 .index {
+  margin-top: calc(10 * 2px);
+  padding: 0 calc(6 * 2px) 0 calc(6 * 2px);
   .banner {
     background-color: #81a380;
   }
