--- a/client/src/layout/index.less
+++ b/client/src/layout/index.less
@@ -1,6 +1,6 @@
 .layout_container {
-  width: 100%;
   height: 100%;
+  padding: 20px;
   .rowStartCenter {
     display: flex;
     flex-direction: row;
