--- a/client/src/layout/index.less
+++ b/client/src/layout/index.less
@@ -1,6 +1,6 @@
 .layout_container {
   height: 100%;
-  padding: 20px;
+  // padding: 20px;
   .rowStartCenter {
     display: flex;
     flex-direction: row;
