--- a/client/src/pages/home/index.less
+++ b/client/src/pages/home/index.less
@@ -97,8 +97,8 @@
       }
       .jobDetailBox {
         display: flex;
-        justify-content: start;
-        align-items: center;
+        justify-content: space-between;
+        align-items: flex-end;
         margin-bottom: 12px;
         .companyLogo {
           width: 82px;
@@ -126,7 +126,7 @@
           font-size: 20px;
           color: white;
           white-space: nowrap;
-          margin-left: 20px;
+          margin-left: 10px;
         }
         // .chatBtn{
         //   margin-bottom: 10px;
