--- a/client/src/pages/home/index.less
+++ b/client/src/pages/home/index.less
@@ -51,7 +51,7 @@
       margin: 16px 0;
     }
     .briefBox {
-      padding: 0 20px;
+      padding: 0 20px 10px 20px;
       .jobTitle {
         display: flex;
         justify-content: space-between;
