--- a/client/src/app.less
+++ b/client/src/app.less
@@ -7,3 +7,11 @@
 .at-tabs__item {
   font-size: calc(16 * 2px) !important;
 }
+
+.at-list__item {
+  line-height: 2.1;
+}
+
+.at-icon-chevron-right {
+  margin-right: 40px;
+}
