--- a/client/src/pages/user/index.less
+++ b/client/src/pages/user/index.less
@@ -1,9 +1,87 @@
-.touxiang {
-    margin-top: calc(31 * 2px);
-    padding: 0 calc(80* 2px) 0 calc(80 * 2px);
-    background-color: rgb(196, 196, 196);
-
-.components-page{
-    margin-top: calc(17 * 2px);
-    padding: 0 calc(354* 2px) 0 calc(130 * 2px);
-    background-color: rgb(129, 123, 128);
+.userBox {
+  .background {
+    background-color: #bed2bb;
+    height: calc(165 * 2px);
+    position: relative;
+    .userBox {
+      display: flex;
+      margin: 0 auto;
+      width: calc(100vw - 160px);
+      .avatar {
+        width: calc(80 * 2px);
+        height: calc(80 * 2px);
+      }
+      .userMsg {
+        display: flex;
+        justify-content: start;
+        margin-left: 30px;
+        .userDetail {
+          .userName {
+            margin-top: 20px;
+            font-size: 48px;
+          }
+          .createResume {
+            margin-top: 20px;
+            padding: 8px 20px;
+            color: white;
+            background-color: #81a380;
+            border-radius: 20px;
+          }
+        }
+        .edit {
+          margin: 35px 0 0 1px;
+          width: 40px;
+          height: 40px;
+        }
+      }
+    }
+    .communicationBox {
+      position: absolute;
+      padding: 0 40px;
+      left: 50%;
+      top: 220px;
+      transform: translate(-50%);
+      width: calc(326 * 2px - 40px);
+      height: calc(110 * 2px);
+      background-color: red;
+      background: rgba(255, 255, 255, 1);
+      box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.1);
+      border-radius: 20px;
+      filter: blur(0px);
+      display: flex;
+      justify-content: space-between;
+      .castResume {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .resumeCount {
+          margin-top: 40px;
+          font-size: 48px;
+        }
+        .resumeTitle {
+          margin-top: 30px;
+          font-size: 36px;
+        }
+      }
+      .line {
+        margin-top: 50px;
+        height: 120px;
+        border-left: 1px rgba(166, 166, 166, 1) solid;
+      }
+    }
+  }
+  .settingList {
+    margin-top: 200px;
+  }
+  .quitLogin {
+    margin: 80px auto 80px auto;
+    width: 400px;
+    height: 80px;
+    background-color: #81a380;
+    color: white;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
